--- a/src/components/pages/Notifications/Notifications.scss
+++ b/src/components/pages/Notifications/Notifications.scss
@@ -1,4 +1,10 @@
 .notificationMain {
+  .custom-css11222333{
+    background-color: var(--background);
+  }
+  .notificationBg{
+    padding: 0px;
+  }
   .MuiGrid-root
     .MuiGrid-container
     .MuiGrid-spacing-xs-4
