--- a/src/components/pages/Tools/PostBack/PostBackTools.scss
+++ b/src/components/pages/Tools/PostBack/PostBackTools.scss
@@ -16,16 +16,16 @@
                     color: var(--22__to__CC);
                     margin-bottom: 15px;
                 }
-                .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
+                .fieldPostTool > label{
                     color: var(--77__to__A5); 
                 }
-                .css-1sumxir-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+                .fieldPostTool > label.Mui-focused {
                     color: var(--77__to__A5);
                 }
-                .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+                .fieldPostTool > div .MuiOutlinedInput-notchedOutline {
                     border-radius: 15px;
                     border: 0px solid var(--77__to__A5);
-                    .css-1ftyaf0{
+                    legend{
                             color: var(--77__to__A5);  
                         
                     }
@@ -53,7 +53,7 @@
                     
                         font-size: 18px;
                         font-weight: 500;
-                        line-height: 27px;
+                        line-height: 16px;
                         letter-spacing: 0em;
                         text-align: left;
                         border-radius: 10px;
@@ -72,6 +72,9 @@
     }
     .table>:not(:first-child) {
         border-top: 0px solid currentColor;
+    }
+    .PostBackTokenBottom{
+        margin-top: 2rem;
     }
     
 }
