--- a/src/components/pages/Account/Account.scss
+++ b/src/components/pages/Account/Account.scss
@@ -7,6 +7,13 @@
                     color: #F2F2F2;
                     font-size: 50px;
           }
+      
+           
+        
+          
+}
+ul.MuiList-root{
+    background-color: var(--secondBackground) ;
 }
 
 /*-----desktop laptop --------------  */
