--- a/src/shared/SharedComponents/ReportAccordionForm/ReportAccordionForm.scss
+++ b/src/shared/SharedComponents/ReportAccordionForm/ReportAccordionForm.scss
@@ -4,6 +4,9 @@
     line-height: 40px;
     width: 100%;
   }
+  .labelReport  label{
+    line-height: 13px;
+  } 
 
   @media only screen and (max-width: 1696px) {
    
