--- a/src/components/pages/Affiliates/Application/ApplicationAffiliate.scss
+++ b/src/components/pages/Affiliates/Application/ApplicationAffiliate.scss
@@ -16,16 +16,19 @@
                     color: var(--22__to__CC);
                     margin-bottom: 15px;
                 }
-                .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
+                #demo-simple-select{
+                    color:  var(--77__to__A5);
+                }
+                .MuiInputLabel-root{
                     color: var(--77__to__A5); 
                 }
-                .css-1sumxir-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+                .Mui-focused {
                     color: var(--77__to__A5);
                 }
-                .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+                .MuiOutlinedInput-notchedOutline {
                     border-radius: 15px;
                     border: 1px solid var(--77__to__A5);
-                    .css-1ftyaf0{
+                    legend{
                             color: var(--77__to__A5);  
                         
                     }
