--- a/src/components/pages/Offers/Application/ApplicationOffer.scss
+++ b/src/components/pages/Offers/Application/ApplicationOffer.scss
@@ -16,10 +16,10 @@
                     color: var(--22__to__CC);
                     margin-bottom: 15px;
                 }
-                .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
+                .MuiInputLabel-root{
                     color: var(--77__to__A5); 
                 }
-                .css-1sumxir-MuiFormLabel-root-MuiInputLabel-root.Mui-focused {
+                .Mui-focused {
                     color: var(--77__to__A5);
                 }
                 // option css start
@@ -33,10 +33,10 @@
                     color: var(--77__to__A5);
                 }
                 // option css end
-                .css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+                .MuiOutlinedInput-notchedOutline {
                     border-radius: 15px;
                     border: 1px solid var(--77__to__A5);
-                    .css-1ftyaf0{
+                    .legend{
                             color: var(--77__to__A5);  
                         
                     }
