--- a/src/shared/SharedComponents/DatePicker/InputDatePicker.scss
+++ b/src/shared/SharedComponents/DatePicker/InputDatePicker.scss
@@ -7,6 +7,10 @@
   
  
 }
+.rs-picker-toggle-wrapper {
+  display: block;
+  max-width: 100%;
+}
 .react-datepicker__month {
   margin: 0.4rem;
   text-align: center;
