--- a/src/components/pages/Dashbard/Elements/responsiveChart.css
+++ b/src/components/pages/Dashbard/Elements/responsiveChart.css
@@ -20,7 +20,8 @@
 @media (min-width: 1200px) and (max-width:1360px){
     #Dasboard #dashboardChart .h6_dashboard p {
         margin-left: 28rem !important;
-        font-size: 19px !important;
+        font-size: 20px !important;
+        margin-top: -28px;
     }
    
 }
@@ -119,26 +120,3 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 /*-----tablets and ipads --------------  */
-@media (min-width: 499px) and (max-width:1199px){
-    .but_dashboardd{
-        display: flex;
-        gap: 18px;
-        justify-content: left !important;
-        margin-top: 0.5rem;
-    }
-}
-
-@media (min-width: 360px) and (max-width:460px){
-    #Dasboard #dashboardChart .datetoData{
-        font-size: 9px !important;
-    }
-    .resBtnSend{
-        font-size: 11px !important;
-        padding: 0px 13% !important;
-    }
-    #Dasboard #dashboardChart .but_dashboardd {
-        display: flex;
-        justify-content: normal;
-        gap: 18px;
-    }
-}
