--- a/src/components/Layout/layout.scss
+++ b/src/components/Layout/layout.scss
@@ -294,3 +294,17 @@
          }
     }
 }
+
+
+@media(min-width:101px) and (max-width:720px) {
+    .MainContainerContentArea {
+          height: 100%;
+          padding: 40px 0px !important;
+      }
+      .MuiBox-root header .header__area .toggle__button {
+          background-color: var(--background);
+          margin-left: 0px;
+          border-radius: 0px;
+          padding: 5px 15px;
+      }
+  }
